--- a/sunnah-frontend/package.json
+++ b/sunnah-frontend/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^1.0.6",
     "axios": "^1.4.0",
     "chart.js": "^3.5.0",
+    "nodemailer": "^6.9.2",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-chartkick": "^1.1.0",
